'Create podcast' section finished.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,10 +8,11 @@
     <title>Podcast App</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="build/css/app.css">
-  
+
 </head>
+
 <body>
     <header class="site-header">
         <div class="contenedor header'grid">
@@ -24,5 +26,18 @@
         </div>
     </header>
 
+    <section class="contenedor seccion">
+        <div class="crear-grid">
+            <img src="build/img/imagen_podcast.svg" alt="imagen podcast">
+
+            <div class="contenido">
+                <h2>Crea tu podcast</h2>
+                <p>Nosotros lo distribuimos a las plataformas más populares como Google Podcast, Spotify, Apple Podcast
+                    y Youtube.</p>
+            </div>
+        </div>
+    </section>
+
 </body>
+
 </html>
