--- a/index.html
+++ b/index.html
@@ -38,6 +38,77 @@
         </div>
     </section>
 
+    <section class="beneficios seccion">
+        <div class="grid-beneficios contenedor">
+            <div class="contenido-beneficios">
+                <h2>Llega a miles y gana dinero</h2>
+                <p>Los podcast se han convertido en un medio de entretenimiento que cada día gana más seguidores, con temas variados que puedes crear tu propio podcast, ser escuchado(a) por miles de personas y convertir tu pasión en un negocio.</p>
+            </div>
+
+            <div class="imagen">
+                <img src="build/img/podcast_cover.avif" alt="imagen podcast">
+            </div>
+        </div>
+    </section>
+
+    <section class="estadisticas seccion contenedor">
+        <h2>Estadísticas detalladas</h2>
+        <p>Nosotros lo distribuimos a las plataformas más populares como Google Podcast, Sporify, Apple Podcast y Youtube.</p>
+
+        <img src="build/img/grafica.svg" alt="tablero de estadísticas">
+    </section>
+
+    <section class="planes seccion">
+        <div class="contenedor">
+            <h2>Planes</h2>
+            <p class="descripcion">Inicia gratis, crece tu plan cuando sea necesario.</p>
+
+            <div class="nusetros-planes">
+
+                <div class="plan inicio">
+                    <h3>Inicio</h3>
+                    <p class="precio">$2.99 Mes</p>
+
+                    <ul class="listado">
+                        <li>30 Episodios</li>
+                        <li>Estadisticas</li>
+                        <li>App para grabar</li>
+                    </ul>
+                    <a href="#" class="boton-plan">Inscribirme</a>
+                </div>
+
+                <div class="plan negocio">
+                    <h3>Negocio</h3>
+                    <p class="precio">$6.99 Mes</p>
+
+                    <ul class="listado">
+                        <li>Episodios ilimitados</li>
+                        <li>Todas las plataformas</li>
+                        <li>Estadísticas</li>
+                        <li>App para grabar</li>
+                        <li>Podcast pagados</li>
+                    </ul>
+                    <a href="#" class="boton-plan">Inscribirme</a>
+                </div>
+
+                
+                <div class="plan pro">
+                    <h3>PRO</h3>
+                    <p class="precio">$4.99 Mes</p>
+
+                    <ul class="listado">
+                        <li>50 Episodios</li>
+                        <li>Todas las plataformas</li>
+                        <li>Estadísticas</li>
+                        <li>App para grabar</li>
+                    </ul>
+                    <a href="#" class="boton-plan">Inscribirme</a>
+                </div>
+                
+            </div>
+        </div>
+    </section>
+
 </body>
 
 </html>
