--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <h2>Planes</h2>
             <p class="descripcion">Inicia gratis, crece tu plan cuando sea necesario.</p>
 
-            <div class="nusetros-planes">
+            <div class="nuestros-planes">
 
                 <div class="plan inicio">
                     <h3>Inicio</h3>
