testimonial section finished

--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
         <div class="grid-beneficios contenedor">
             <div class="contenido-beneficios">
                 <h2>Llega a miles y gana dinero</h2>
-                <p>Los podcast se han convertido en un medio de entretenimiento que cada día gana más seguidores, con temas variados que puedes crear tu propio podcast, ser escuchado(a) por miles de personas y convertir tu pasión en un negocio.</p>
+                <p>Los podcast se han convertido en un medio de entretenimiento que cada día gana más seguidores, con
+                    temas variados que puedes crear tu propio podcast, ser escuchado(a) por miles de personas y
+                    convertir tu pasión en un negocio.</p>
             </div>
 
             <div class="imagen">
@@ -53,7 +55,8 @@
 
     <section class="estadisticas seccion contenedor">
         <h2>Estadísticas detalladas</h2>
-        <p>Nosotros lo distribuimos a las plataformas más populares como Google Podcast, Sporify, Apple Podcast y Youtube.</p>
+        <p>Nosotros lo distribuimos a las plataformas más populares como Google Podcast, Sporify, Apple Podcast y
+            Youtube.</p>
 
         <img src="build/img/grafica.svg" alt="tablero de estadísticas">
     </section>
@@ -91,7 +94,7 @@
                     <a href="#" class="boton-plan">Inscribirme</a>
                 </div>
 
-                
+
                 <div class="plan pro">
                     <h3>PRO</h3>
                     <p class="precio">$4.99 Mes</p>
@@ -104,8 +107,31 @@
                     </ul>
                     <a href="#" class="boton-plan">Inscribirme</a>
                 </div>
-                
+
             </div>
+        </div>
+    </section>
+
+    <section class="contenedor seccion testimoniales">
+        <div class="imagen">
+            <img src="build/img/app.jpg" alt="imagen app">
+        </div>
+        <div class="contenido">
+            <h2>Testimoniales</h2>
+
+            <div class="testimonial">
+                <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, omnis ipsum laborum delectus saepe
+                    odit. Error nisi, esse voluptatum blanditiis incidunt mollitia.</p>
+            </div>
+            <div class="testimonial">
+                <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut sequi, beatae sit dolores veniam
+                    repudiandae. Aut, assumenda ad. Ad consequatur dolor incidunt voluptatibus.</p>
+            </div>
+            <div class="testimonial">
+                <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magnam eos, laudantium eveniet doloremque
+                    suscipit voluptatibus, deserunt dolorum minus assumenda odio.</p>
+            </div>
+
         </div>
     </section>
 
